# TradeIt

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
agent/prompts/: system_prompt.py
agent/schemas/: tool_final_output_schema.py  tool_intraday_prices_schema.py  tool_longterm_prices_schema.py  tool_news_schema.py
agent/tools/: fetch_intraday_prices.py  fetch_longterm_prices.py  fetch_news.py  get_news.py  get_prices.py
app/: dependencies.py  exceptions.py
app/api/: fetch_fear_greed.py  fetch_news.py  fetch_prices.py
app/clients/: alphavantage_client.py  alternativeme_client.py  yahoo_finance_client.py
app/data/: currencies_validation.py
app/database/: lifespan.py  tables.py
app/market_data/: get_news.py  get_prices.py
app/repositories/: fear_greed_idx_repository.py  news_repository.py  prices_repository.py
app/schemas/: env_schema.py  fear_greed_idx_schema.py  intr_prices_valid_schema.py  prices_schema.py
app/services/: get_intraday_prices.py
