[project]
name = "trading-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.121.3",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.2.13",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
